# monoglossic

./: Cargo.toml
src/: config.rs  lib.rs  main.rs  mongodb.rs  monoglossic_repository.rs
test/: config.json
