[package]
name = "monoglossic"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = "3.1.6"
serde = "1.0.136"
serde_json = "1.0"

[dependencies.mongodb]
version = "2.1.0"
default-features = false
features = ["sync"]

[dependencies.chrono]
version = "0.4"
features = ["serde"]

